# OSS-DBSv2

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Johnson_Butenko_axon_McIntyre.h5  MANIFEST.in  README.md  Voxel.py  atus  build_merged.py  fft.py  generate_testdata.py  hdf5.py  impedances.csv  main.py  mytestfile.hdf5  octaves.py  pyproject.toml  requirements.txt  result.csv  result.h5  result.hdf5  result.vtu.REMOVED.git-id  sample.json  setup.py  solution_130.0.h5.REMOVED.git-id  test.csv  test.hdf5  test_Voxel.py  test_result.hdf5  tox.ini
.github/: ISSUE_TEMPLATE
case1/: impedances.csv
case3/: impedances.csv
custom/: __init__.py  abbott_stjude_active_tip_custom.json  abbott_stjude_directed_custom.json  boston_scientific_vercise_custom.json  medtronic_custom.json  micro_probes_SNEX100_custom.json  micro_probes_custom_rodent_custom.json
docs/: ._Makefile  ._conf.py  ._example1.rst  ._example2.rst  ._examples.rst  ._index.rst  ._start.rst  ._volume_conductor_model.rst  Abbott_Active_Tip.rst  Abbott_Active_Tip_6142_6145.rst  Abbott_Active_Tip_6146_6149.rst  Abbott_StJude_Directed.rst  Boston_Scientific_Vercise.rst  Boston_Scientific_Vercise_Directed.rst  Dixi_Microtechniques.rst  Medtronic.rst  Medtronic_DBS.rst  Medtronic_SenSight.rst  MicroElectrode.rst  Micro_Probes_Custom_Rodent.rst  Micro_Probes_Snex100.rst  Pins_Medical.rst  Pins_Medical_L301_L302.rst  Pins_Medical_L303.rst  README.md  add_electrode.rst  axon_models.rst  brain_geometry.rst  conf.py  electrodes.rst  example1.rst  example2.rst  example_benchmark.rst  example_rat.rst  examples.rst  index.rst  input_settings.rst  installation.rst  lead_dbs.rst  materials.rst  (+13 more)
examples/: Nifti1ImageCreation.py  ossdbs_tutorial.ipynb
input_case1/: input_case1.json
input_case2/: SNEX-100_TC_Electrodes_geometry_wo_offset.csv  input_case2.json
input_case3/: input_case3.json
input_case4/: input_case4.json
input_case5/: input_case5.json  material_uq.py  parameters_GM_CC4.csv
input_case6/: input_case6.json
input_files/: Nifti1ImageCreation.py  TestDTI.nii.REMOVED.git-id  axon_test.hdf5  data.h5  icbm_avg_152_segmented.nii.REMOVED.git-id  input.json  inputScenario1.json  inputTest.json  inputTestMultElectrodes.json  inputTest_Philipp.json  input_cc.json  input_impedance.json  segmask.nii.REMOVED.git-id  striatum.hdf5  test.hdf5
input_test_cases/: README.md  conftest.py  run_all_tests.py  run_all_tests.sh  test_simulations.py  update_desired_output.py
leaddbsinterface/: __init__.py  allocate_axons.py  convert_input_dictionary.py  default_settings.py  lead_settings.py
ossdbs/: Nifti1Image.py  Output.py  __init__.py  __version__.py  api.py  boundaries.py  bounding_box.py  brain_geometry.py  brain_model.py  brainsubstance.py  conductivity.py  configuration.py  contacts.py  controller.py  controller_impedance.py  dti.py  electrode_collection.py  electrode_contacts.py  electrode_creation.py  electrodes.py  encapsulatin_layer.py  fastfouriertransform.py  impedance_analysis.py  input.py  laplace_equation.py  main.py  material_disribution.py  materials.py  mesh.py  model_geometry.py  nifti1Image.py  nifti1ImageX.py  output.py  parameter_check.py  point_analysis.py  point_models.py  points.py  preconditioner.py  region.py  settings.py  (+15 more)
ossdbs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
public/: ._example1.html  ._example2.html  ._examples.html  ._index.html  ._start.html  ._volume_conductor_model.html  .buildinfo  example1.html  example2.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  start.html  volume_conductor_model.html
result/: impedances.csv  mesh.vol.REMOVED.git-id  potential.data.REMOVED.git-id  test_result.vtu.REMOVED.git-id  vta.h5
src/: Nifti1Image.py  brain_geometry.py  brain_model.py  brainsubstance.py  conductivity  conductivity.py  configuration.py  dielectric_distribution.py  diffusion_tensor_imaging.py  fastfouriertransform.py  geometry.py  input.py  laplace_equation.py  magnetic_resonance_imaging.py  mesh.py  (+10 more)
(+1082 files in other folders)
